# codev

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
apfs-rs/: CLAUDE.md  Cargo.toml  Justfile  README.md
apfs-rs/.github/: copilot-instructions.md
apfs-rs/.github/instructions/: apfs-core.instructions.md  apfs-write-safety.instructions.md
apfs-rs/.github/workflows/: ci.yml  security.yml
apfs-rs/codev/: README.md
apfs-rs/codev/plans/: 0001-m001-inspect.md
apfs-rs/codev/resources/: capabilities.yaml  safety-gates.yaml
apfs-rs/codev/resources/schemas/: capabilities.schema.json  safety-gates.schema.json
apfs-rs/codev/reviews/: 0001-bootstrap-review.md
apfs-rs/codev/specs/: 0001-m001-inspect.md
apfs-rs/crates/apfs-blockdev/: Cargo.toml
apfs-rs/crates/apfs-blockdev/src/: lib.rs
apfs-rs/crates/apfs-cli/: Cargo.toml
apfs-rs/crates/apfs-cli/src/: main.rs
apfs-rs/crates/apfs-core/: Cargo.toml
apfs-rs/crates/apfs-core/src/: lib.rs
apfs-rs/crates/apfs-test/: Cargo.toml
apfs-rs/crates/apfs-test/src/: lib.rs
apfs-rs/crates/apfs-types/: Cargo.toml
apfs-rs/crates/apfs-types/src/: lib.rs
apfs-rs/fixtures/: README.md
apfs-rs/xtask/: Cargo.toml
apfs-rs/xtask/src/: main.rs
codev/: projectlist.md
codev-skeleton/roles/: architect.md
codev-skeleton/templates/: AGENTS.md  CLAUDE.md
codev/plans/: 1011-agent-farm-inline-protocol-md-.md  1012-scaffold-codev-init-bootstraps.md  (+34 more)
codev/resources/: arch.md  (+2 more)
codev/resources/apfs-rs/templates/xtask/: Cargo.toml
codev/resources/apfs-rs/templates/xtask/src/: main.rs
(+308 files in other folders)
