[workspace]
members = [
  "crates/apfs-types",
  "crates/apfs-blockdev",
  "crates/apfs-core",
  "crates/apfs-cli",
  "crates/apfs-test",
  "xtask",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/edithatogo/codev"
rust-version = "1.80"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
jsonschema = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
walkdir = "2"
